force-app/main/default/objects/geopointe__GP_Device__c/geopointe__GP_Device__c.object-meta.xml
<CustomObject>
    <label>Geopointe Device</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>