force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__City__c.field-meta.xml
<CustomField>
    <fullName>geopointe__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>