force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Country__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>