force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Description__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>