force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Device_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device_Id__c</fullName>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>