force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Device_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device_Type__c</fullName>
    <label>Device Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>12V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>