force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Device_Vendor__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device_Vendor__c</fullName>
    <label>Device Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CalAmp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>