force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Location__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Location__c</fullName>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>