force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Location_As_Of__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Location_As_Of__c</fullName>
    <label>Location As Of</label>
    <type>DateTime</type>
</CustomField>