force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Location_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Location_Data_Source__c</fullName>
    <label>Location Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>