force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__State__c.field-meta.xml
<CustomField>
    <fullName>geopointe__State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>