force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__Street__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>