force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__User__c.field-meta.xml
<CustomField>
    <fullName>geopointe__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user associated to this device.  e.g. the driver</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Geopointe_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>