force-app/main/default/objects/geopointe__GP_Device__c/fields/geopointe__VIN__c.field-meta.xml
<CustomField>
    <fullName>geopointe__VIN__c</fullName>
    <label>VIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>