force-app/main/default/objects/geopointe__GP_Device__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Device_Id__c</columns>
    <columns>geopointe__User__c</columns>
    <columns>geopointe__Location_As_Of__c</columns>
    <columns>geopointe__City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>